--- a/app/views/rankings/want.html.erb
+++ b/app/views/rankings/want.html.erb
@@ -23,6 +23,7 @@
 
                   
 <%= render 'ownerships/want_button', item: item %>
+<%= render 'ownerships/have_button', item: item %>
 
                 
 <% end %>
